--- a/golfklubb.html
+++ b/golfklubb.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="golfklubb-style.css">
 </head>
 <body>
+     <section class="top-nav">
+       
+            <ul class="menu">
+                <li><a href="#">Hem</a></li>
+                <li><a href="#">Om oss</a></li>
+                <li><a href="#">Bokning</a></li>
+                <li><a href="#">Medlem</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+         </section>
+    
     <div class="video-container">
         <video autoplay muted loop id="background-video">
             <source src="golf2.mp4" type="video/mp4">
