--- a/golfklubb.html
+++ b/golfklubb.html
@@ -10,7 +10,7 @@
      <section class="top-nav">
        
             <ul class="menu">
-                <li><a href="#">Hem</a></li>
+                <li><a href="#">Hem</a></li> <--Kommentar!-->
                 <li><a href="#">Om oss</a></li>
                 <li><a href="#">Bokning</a></li>
                 <li><a href="#">Medlem</a></li>
