--- a/golfklubb.html
+++ b/golfklubb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="se-SV">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +11,9 @@
         <video autoplay muted loop id="background-video">
             <source src="golf2.mp4" type="video/mp4">
         </video>
-        <div class="content">
-            <h1>Golfklubb</h1>
-            <p>Välkommen</p>
+        <div class="title-content">
+            <div class="title">Välkommen till <br> Golfklubb Centar</div>
+            <div class="info">För mer information om klubben, klicka <a href=""><b>här</b></a></div>
         </div>
     </div>
 </body>
