--- a/golfklubb.html
+++ b/golfklubb.html
@@ -11,7 +11,7 @@
        
             <ul class="menu">
                 <li><a href="#">Hem</a></li>
-                <li><a href="#">Om oss</a></li>
+                <li><a href="omoss.html">Om oss</a></li>
                 <li><a href="#">Bokning</a></li>
                 <li><a href="#">Medlem</a></li>
                 <li><a href="#">Kontakt</a></li>
