--- a/golfklubb.html
+++ b/golfklubb.html
@@ -60,6 +60,17 @@
                 </a>
             </div>
         </div>
+        <!--Upphövsrätt-->
+        <hr class="line">
+        <div class="footer-container-legal">
+            <div class="footer-cookies">
+                <p><a href="legal.html">Kakor</a> &VerticalLine;
+                <a href="legal.html">Integritetspolicy</a></p>
+            </div>
+            <div class="footer-copyright">
+                <p>Copyright &copy; 2024</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
