--- a/golfklubb.html
+++ b/golfklubb.html
@@ -61,6 +61,7 @@
             </div>
         </div>
         <!--Upphövsrätt-->
+        <!--Kommentar-->
         <hr class="line">
         <div class="footer-container-legal">
             <div class="footer-cookies">
