--- a/golfklubb.html
+++ b/golfklubb.html
@@ -27,7 +27,37 @@
             <div class="info">För mer information om klubben, klicka <a href=""><b>här</b></a></div>
         </div>
     </div>
+<!--Härifrån börjar min kod som är nyhetssidan "Aktuellt" på startsidan-->
 
+<center>
+    <a href="..."><button><strong>Bli medlem nu!</strong></button></a>
+</center>
+
+
+    <div class="newssite">
+        <h1>Aktuellt</h1>
+            <a href="">Mer nyheter..</a>
+    </div>
+
+    <div class="image-links">
+            <figure>
+                <figcaption>Våra nya golfbilar...</figcaption>
+                <a href=""><img src="golf-cart-756048_640.jpg" alt="Golfbil" title="våra nya golfbilar" width="350" height="250"></a> 
+            </figure>
+
+            <figure>
+                <figcaption>Publikrekord under sommarens golftävling...</figcaption>
+                <a href=""><img src="bernhard-longer-1501038_640.jpg" alt="man spelar golf" title="golftävling" width="350" height="250"></a>
+            </figure>
+
+            <figure>
+                <figcaption>Anmäl dig till höstens golfkurser</figcaption>
+                <a href=""><img src="golf-1909115_640.jpg" alt="Golfklubbor" title="golfkurs" width="350" height="250"></a>
+            </figure>
+    </div>
+
+    <!-- Här slutar Emilias kod (nyhetsdelen) -->
+    
     <div class="newsletter-container">
         <h2>Prenumerera på vårt nyhetsbrev</h2>
         <p>Fyll i din e-postadress för att få uppdateringar om våra senaste nyheter och erbjudanden.</p>
