Uppdaterade Nav-länkarna

--- a/golfklubb.html
+++ b/golfklubb.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="se-SV">
 <head>
@@ -10,10 +11,10 @@
      <section class="top-nav">
        
             <ul class="menu">
-                <li><a href="#">Hem</a></li>
-                <li><a href="#">Om oss</a></li>
-                <li><a href="#">Bokning</a></li>
-                <li><a href="#">Medlem</a></li>
+                <li><a href="golfklubb.html">Hem</a></li>
+                <li><a href="omoss.html">Om oss</a></li>
+                <li><a href="bokning.html">Bokning</a></li>
+                <li><a href="medlem.html">Medlem</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
          </section>
