--- a/golfklubb.html
+++ b/golfklubb.html
@@ -24,8 +24,8 @@
             <source src="golf2.mp4" type="video/mp4">
         </video>
         <div class="title-content">
-            <div class="title">Välkommen till <br> Golfklubb Centar</div>
-            <div class="info">För mer information om klubben, klicka <a href=""><b>här</b></a></div>
+            <div class="title">Välkommen till <br> TUC Golfklubb</div>
+            <div class="info">För mer information om klubben, klicka <a href="omoss.html"><b>här</b></a></div>
         </div>
     </div>
 <!--Härifrån börjar min kod som är nyhetssidan "Aktuellt" på startsidan-->
