--- a/Grupprojekt GOLF/bokning.html
+++ b/Grupprojekt GOLF/bokning.html
@@ -26,7 +26,9 @@
  
     </div>
 </div>
+        <div class="background-kontaktobokning">
 
+        </div>
 <footer>
     <div class="footer-container">
         
