--- a/golfklubb.html
+++ b/golfklubb.html
@@ -28,12 +28,14 @@
             <div class="info">För mer information om klubben, klicka <a href="omoss.html"><b>här</b></a></div>
         </div>
     </div>
-<!--Härifrån börjar min kod som är nyhetssidan "Aktuellt" på startsidan-->
+<!--Härifrån börjar Emilias kod (nyhetsdelen på startsidan)-->
 
-<center>
-    <a href="..."><button><strong>Bli medlem nu!</strong></button></a>
-</center>
-
+<section>
+    <div class="section-button">
+        <div class="member-button">
+            <a href="..." class="button"><strong>Logga in | Bli medlem nu!</strong></a>
+        </div>
+    </div>
 
     <div class="newssite">
         <h1>Aktuellt</h1>
@@ -41,21 +43,24 @@
     </div>
 
     <div class="image-links">
+        <div class="picture-boxes">
             <figure>
                 <figcaption>Våra nya golfbilar...</figcaption>
-                <a href=""><img src="golf-cart-756048_640.jpg" alt="Golfbil" title="våra nya golfbilar" width="350" height="250"></a> 
+                <a href=""><img src="golf-cart-756048_640.jpg" alt="Golfbil" title="våra nya golfbilar"></a> 
             </figure>
 
             <figure>
                 <figcaption>Publikrekord under sommarens golftävling...</figcaption>
-                <a href=""><img src="bernhard-longer-1501038_640.jpg" alt="man spelar golf" title="golftävling" width="350" height="250"></a>
+                <a href=""><img src="bernhard-longer-1501038_640.jpg" alt="man spelar golf" title="golftävling"></a>
             </figure>
 
             <figure>
                 <figcaption>Anmäl dig till höstens golfkurser</figcaption>
-                <a href=""><img src="golf-1909115_640.jpg" alt="Golfklubbor" title="golfkurs" width="350" height="250"></a>
+                <a href=""><img src="golf-1909115_640.jpg" alt="Golfklubbor" title="golfkurs"></a>
             </figure>
+        </div>
     </div>
+</section>
 
     <!-- Här slutar Emilias kod (nyhetsdelen) -->
     
