--- a/golfklubb.html
+++ b/golfklubb.html
@@ -15,7 +15,7 @@
                 <li><a href="omoss.html">Om oss</a></li>
                 <li><a href="bokning.html">Bokning</a></li>
                 <li><a href="medlem.html">Medlem</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
          </section>
     
