--- a/golfklubb.html
+++ b/golfklubb.html
@@ -8,16 +8,42 @@
     <link rel="stylesheet" href="golfklubb-style.css">
 </head>
 <body>
-     <section class="top-nav">
-       
-            <ul class="menu">
-                <li><a href="golfklubb.html">Hem</a></li>
-                <li><a href="omoss.html">Om oss</a></li>
-                <li><a href="bokning.html">Bokning</a></li>
-                <li><a href="medlem.html">Medlem</a></li>
-                <li><a href="#">Kontakt</a></li>
-            </ul>
-         </section>
+    <!----Adinas nav del---->
+    <div class="top-nav">
+        <ul class="menu">
+            <li><a href="#">Hem</a></li>
+
+            <li><a href="#">Spela golf</a>
+                <ul class="dropdown-spela">
+                    <li><a href="#">Företag</a></li>
+                    <li><a href="#">Gäst</a></li>
+                    <li><a href="#">Tävlingar/<br>Evenemang</a></li>
+                </ul>
+            </li>
+
+            <li><a href="#">Om oss</a>
+                <ul class="dropdown">
+                    <li><a href="#">Våra banor</a></li>
+                    <li><a href="#">Faciliteter</a></li>
+                    <li><a href="#">Medlem</a></li>
+                    <li><a href="#">Nyheter</a></li>
+                </ul>
+            </li>
+
+            <li><a href="#">Medlem</a>
+                <ul class="dropdown-medlem">
+                    <li><a href="#">Logga in</a></li>
+                    <li><a href="#">Bli medlem</a></li>
+                    <li><a href="#">Förmåner</a></li>
+                    <li><a href="#">Bokning</a></li>
+                </ul>
+            </li>
+
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="#">Restaurang | Shop</a></li>
+        </ul>
+    </div>
+   <!----Adinas nav del slut---->
     
     <div class="video-container">
         <video autoplay muted loop id="background-video">
