--- a/kod-html/kontakt/kontakt.html
+++ b/kod-html/kontakt/kontakt.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt - Golfklubb</title>
-    <link rel="stylesheet" href="kontaktstyle.css">
+    <link rel="stylesheet" href="/kod-css/kontaktstyle.css">
 </head>
 
 <body>
 
     <section class="top-nav">
         <ul class="menu">
-            <li><a href="golfklubb.html">Hem</a></li>
+            <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
             <li><a href="omoss.html">Om oss</a></li>
             <li><a href="bokning.html">Bokning</a></li>
-            <li><a href="medlem.html">Medlem</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+            <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
         </ul>
     </section>
 
     <div class="header-image">
-        <img src="golfboll.jpg" alt="Golfklubb Header Image">
+        <img src="/bilder/kontakt-header.jpg" alt="Golfklubb Header Image">
     </div>
 
 
@@ -91,7 +91,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
+                <img src="/bilder/Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
             </div>
             <div class="footer-hours">
                 <h3>Öppettider</h3>
@@ -100,16 +100,16 @@
             </div>
             <div class="footer-links">
                 <h3>Länkar</h3>
-                <a href="om-oss.html">Om oss</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="">Om oss</a>
+                <a href="/kod-html/kontakt/kontakt.html">Kontakt</a>
             </div>
             <div class="footer-social">
                 <h3>Följ oss</h3>
                 <a href="https://www.instagram.com" target="_blank">
-                    <img src="instagram-3814080_1280.webp" alt="Instagram">
+                    <img src="/bilder/instagram-3814080_1280.webp" alt="Instagram">
                 </a>
                 <a href="https://www.facebook.com" target="_blank">
-                    <img src="facebook-6549798_1280.webp" alt="Facebook">
+                    <img src="/bilder/facebook-6549798_1280.webp" alt="Facebook">
                 </a>
             </div>
         </div>
