--- a/kod-html/medlem/createnewmember.html
+++ b/kod-html/medlem/createnewmember.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bli Medlem - Golfklubb</title>
-    <link rel="stylesheet" href="medlem.css"> <!-- Länka till CSS för Bli Medlem -->
+    <link rel="stylesheet" href="/kod-css/medlem.css"> <!-- Länka till CSS för Bli Medlem -->
 </head>
 <body>
     <!-- Navigationsmeny -->
     <section class="top-nav">
         <ul class="menu">
-            <li><a href="golfklubb.html">Hem</a></li>
-            <li><a href="omoss.html">Om oss</a></li>
-            <li><a href="bokning.html">Bokning</a></li>
-            <li><a href="medlem.html">Medlem</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="/hem/golfklubb.html">Hem</a></li>
+            <li><a href="/om-oss/omoss.html">Om oss</a></li>
+            <li><a href="/bokning/bokning.html">Bokning</a></li>
+            <li><a href="/medlem/medlem.html">Medlem</a></li>
+            <li><a href="/kontakt/kontakt.html">Kontakt</a></li>
         </ul>
     </section>
 
@@ -52,7 +52,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
+                <img src="/bilder/Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
             </div>
 
             <div class="footer-hours">
@@ -63,17 +63,17 @@
 
             <div class="footer-links">
                 <h3>Länkar</h3>
-                <a href="omoss.html">Om oss</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="/om-oss/omoss.html">Om oss</a>
+                <a href="/kontakt/kontakt.html">Kontakt</a>
             </div>
 
             <div class="footer-social">
                 <h3>Följ oss</h3>
                 <a href="https://www.instagram.com" target="_blank">
-                    <img src="instagram-3814080_1280.webp" alt="Instagram">
+                    <img src="/bilder/instagram-3814080_1280.webp" alt="Instagram">
                 </a>
                 <a href="https://www.facebook.com" target="_blank">
-                    <img src="facebook-6549798_1280.webp" alt="Facebook">
+                    <img src="/bilder/facebook-6549798_1280.webp" alt="Facebook">
                 </a>
             </div>
         </div>
