--- a/kod-html/medlem/medlem.html
+++ b/kod-html/medlem/medlem.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golfklubb - Medlemssektion</title>
-    <link rel="stylesheet" href="medlem.css"> <!-- Ny CSS för medlemssidan -->
+    <link rel="stylesheet" href="/kod-css/medlem.css"> <!-- Ny CSS för medlemssidan -->
 </head>
 <body>
     <!-- Navigationsmeny -->
     <section class="top-nav">
         <ul class="menu">
-            <li><a href="golfklubb.html">Hem</a></li>
+            <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
             <li><a href="omoss.html">Om oss</a></li>
             <li><a href="bokning.html">Bokning</a></li>
-            <li><a href="medlem.html">Medlem</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+            <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
         </ul>
     </section>
 
@@ -39,7 +39,7 @@
                     <button type="submit">Logga in</button>
                 </form>
 
-                <p>Har du inget konto? <a href="createnewmember.html">Registrera dig här</a>.</p>
+                <p>Har du inget konto? <a href="/kod-html/medlem/createnewmember.html">Registrera dig här</a>.</p>
             </div>
         </div>
         <!-- Medlemsförmåner -->
@@ -72,7 +72,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
+                <img src="/bilder/Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
             </div>
 
             <div class="footer-hours">
@@ -83,17 +83,17 @@
 
             <div class="footer-links">
                 <h3>Länkar</h3>
-                <a href="omoss.html">Om oss</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="">Om oss</a>
+                <a href="/kod-html/kontakt/kontakt.html">Kontakt</a>
             </div>
 
             <div class="footer-social">
                 <h3>Följ oss</h3>
                 <a href="https://www.instagram.com" target="_blank">
-                    <img src="instagram-3814080_1280.webp" alt="Instagram">
+                    <img src="/bilder/instagram-3814080_1280.webp" alt="Instagram">
                 </a>
                 <a href="https://www.facebook.com" target="_blank">
-                    <img src="facebook-6549798_1280.webp" alt="Facebook">
+                    <img src="/bilder/facebook-6549798_1280.webp" alt="Facebook">
                 </a>
             </div>
         </div>
