Uppdaterade nav menyn i alla befintliga html-filer

--- a/kod-html/hem/golfklubb.html
+++ b/kod-html/hem/golfklubb.html
@@ -12,7 +12,7 @@
     <!----Adinas nav del---->
     <div class="top-nav">
         <ul class="menu">
-            <li><a href="#">Hem</a></li>
+            <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
 
             <li><a href="#">Spela golf</a>
                 <ul class="dropdown-spela">
