--- a/kod-html/medlem/createnewmember.html
+++ b/kod-html/medlem/createnewmember.html
@@ -7,16 +7,43 @@
     <link rel="stylesheet" href="/kod-css/medlem.css"> <!-- Länka till CSS för Bli Medlem -->
 </head>
 <body>
-    <!-- Navigationsmeny -->
-    <section class="top-nav">
-        <ul class="menu">
-            <li><a href="/hem/golfklubb.html">Hem</a></li>
-            <li><a href="/om-oss/omoss.html">Om oss</a></li>
-            <li><a href="/bokning/bokning.html">Bokning</a></li>
-            <li><a href="/medlem/medlem.html">Medlem</a></li>
-            <li><a href="/kontakt/kontakt.html">Kontakt</a></li>
-        </ul>
-    </section>
+
+   <!----Adinas nav del---->
+   <div class="top-nav">
+    <ul class="menu">
+        <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
+
+        <li><a href="#">Spela golf</a>
+            <ul class="dropdown-spela">
+                <li><a href="#">Företag</a></li>
+                <li><a href="#">Gäst</a></li>
+                <li><a href="#">Tävlingar/<br>Evenemang</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#">Om oss</a>
+            <ul class="dropdown">
+                <li><a href="#">Våra banor</a></li>
+                <li><a href="#">Faciliteter</a></li>
+                <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+                <li><a href="#">Nyheter</a></li>
+            </ul>
+        </li>
+
+        <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
+            <ul class="dropdown-medlem">
+                <li><a href="/kod-html/medlem/medlem.html"></a></li>
+                <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
+                <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
+                <li><a href="#">Bokning</a></li>
+            </ul>
+        </li>
+
+        <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
+        <li><a href="#">Restaurang | Shop</a></li>
+    </ul>
+</div>
+<!----Adinas nav del slut---->
 
     <!-- Bli Medlem Sektion -->
     <div class="register-background">
