--- a/kod-html/kontakt/kontakt.html
+++ b/kod-html/kontakt/kontakt.html
@@ -10,15 +10,42 @@
 
 <body>
 
-    <section class="top-nav">
-        <ul class="menu">
-            <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
-            <li><a href="omoss.html">Om oss</a></li>
-            <li><a href="bokning.html">Bokning</a></li>
-            <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
-            <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-        </ul>
-    </section>
+   <!----Adinas nav del---->
+   <div class="top-nav">
+    <ul class="menu">
+        <li><a href="#">Hem</a></li>
+
+        <li><a href="#">Spela golf</a>
+            <ul class="dropdown-spela">
+                <li><a href="#">Företag</a></li>
+                <li><a href="#">Gäst</a></li>
+                <li><a href="#">Tävlingar/<br>Evenemang</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#">Om oss</a>
+            <ul class="dropdown">
+                <li><a href="#">Våra banor</a></li>
+                <li><a href="#">Faciliteter</a></li>
+                <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+                <li><a href="#">Nyheter</a></li>
+            </ul>
+        </li>
+
+        <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
+            <ul class="dropdown-medlem">
+                <li><a href="/kod-html/medlem/medlem.html"></a></li>
+                <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
+                <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
+                <li><a href="#">Bokning</a></li>
+            </ul>
+        </li>
+
+        <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
+        <li><a href="#">Restaurang | Shop</a></li>
+    </ul>
+</div>
+<!----Adinas nav del slut---->
 
     <div class="header-image">
         <img src="/bilder/kontakt-header.jpg" alt="Golfklubb Header Image">
