--- a/kod-html/hem/golfklubb.html
+++ b/kod-html/hem/golfklubb.html
@@ -98,17 +98,17 @@
     </div>
     <div class="tavlingar">
         <video autoplay muted loop id="tavvideo">
-            <source src="tavgolf3.mp4" type="video/mp4">
+            <source src="/filmer/tavgolf3.mp4" type="video/mp4">
         </video>
         <div class="callout">
             <div>Svinga mot stjärnorna... <br> ...låt varje putt bli en seger! ⛳️✨</div>
         </div>
             <figure>
-            <a href="tavlingar_kalendern.html" target="_blank"><img class="goldencup" alt="A gold cup" src="goldencup_transparent3.png" style="height: 45%; width: 15%;"></a>
+            <a href="tavlingar_kalendern.html" target="_blank"><img class="goldencup" alt="A gold cup" src="/bilder/goldencup_transparent3.png" style="height: 45%; width: 15%;"></a>
             <figcaption class="caption1">Tävla</figcaption>
             </figure>
             <figure>
-            <a href="tavlingar_kalendern.html" target="_blank"><img class="kalender" alt="A golf event calendar" src="calendar.png" style="height: 45%; width: 15%;"></a>
+            <a href="tavlingar_kalendern.html" target="_blank"><img class="kalender" alt="A golf event calendar" src="/bilder/calendar.png" style="height: 45%; width: 15%;"></a>
             <figcaption class="caption2">Kalender</figcaption>
             </figure>
         </div>
