--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="se-SV">
 <head>
@@ -18,6 +17,7 @@
                 <ul class="dropdown-spela">
                     <li><a href="#">Företag</a></li>
                     <li><a href="#">Gäst</a></li>
+                     <li><a href="#">Greenfee och priser</a></li>
                     <li><a href="#">Tävlingar/<br>Evenemang</a></li>
                 </ul>
             </li>
