--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -24,6 +24,7 @@
 
             <li><a href="#">Om oss</a>
                 <ul class="dropdown">
+                    <li><a href="#">Historia och vision</a></li>
                     <li><a href="#">Våra banor</a></li>
                     <li><a href="#">Faciliteter</a></li>
                     <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
