Nyhetssidan + sorterat sökvägarna

--- a/kod-html/Omoss/nyheter.html
+++ b/kod-html/Omoss/nyheter.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nyheter - Golfklubb</title>
-    <link rel="stylesheet" href="nyheter.css">
+    <link rel="stylesheet" href="/kod-css/nyheter.css">
     <link rel="stylesheet" href="/kod-css/golfklubb-style.css">
 </head>
 
@@ -23,7 +23,7 @@
                 <h1>Senaste nytt från Golfklubben</h1>
                 <article id="article1">
                     <figure>
-                        <img src="golf-cart-756048_640.jpg" title="golfbil" alt="vår nya golfbil">
+                        <img src="/bilder/golf-cart-756048_640.jpg" title="golfbil" alt="vår nya golfbil">
                         <figcaption>Nya golfbilar</figcaption>
                     </figure>
                     <hgroup>
@@ -36,7 +36,7 @@
 
                 <article id="article2">
                     <figure>
-                        <img src="/bernhard-longer-1501038_640.jpg" title="golftävling" alt="sommarens golftävling">
+                        <img src="/bilder/bernhard-longer-1501038_640.jpg" title="golftävling" alt="sommarens golftävling">
                         <figcaption>Sommarens golftävling</figcaption>
                     </figure>
                     <hgroup>
@@ -48,7 +48,7 @@
 
                 <article id="article3">
                     <figure>
-                        <img src="/golf-1909115_640.jpg" title="golfkurs i höst" alt="golfklubbor">
+                        <img src="/bilder/golf-1909115_640.jpg" title="golfkurs i höst" alt="golfklubbor">
                         <figcaption>Höstens golfkurser</figcaption>
                     </figure>
                     <hgroup>
@@ -61,7 +61,7 @@
 
                 <article id="article4">
                     <figure>
-                        <img src="screen-golf-2265263_640.jpg" title="golfsimulator-rum" alt="golfsimulator-rum">
+                        <img src="/bilder/screen-golf-2265263_640.jpg" title="golfsimulator-rum" alt="golfsimulator-rum">
                         <figcaption>Simulator-rummet</figcaption>
                     </figure>
                     <hgroup>
@@ -74,7 +74,7 @@
 
                 <article id="article5">
                     <figure>
-                        <img src="sunset-3086618_640.jpg" title="solnedgång golf" alt="golf i solnedgång">
+                        <img src="/bilder/sunset-3086618_640.jpg" title="solnedgång golf" alt="golf i solnedgång">
                         <figcaption>Golf i solnedgång</figcaption>
                     </figure>
                     <hgroup>
@@ -87,7 +87,7 @@
 
                 <article id="article6">
                     <figure>
-                        <img src="table-5356682_640.jpg" title="middag i restaurangen" alt="restaurangdelen">
+                        <img src="/bilder/table-5356682_640.jpg" title="middag i restaurangen" alt="restaurangdelen">
                         <figcaption>Boka middag i vår restaurang</figcaption>
                     </figure>
                     <hgroup>
@@ -100,7 +100,7 @@
 
                 <article id="article7">
                     <figure>
-                        <img src="golf-2352092_640.jpg" title="nyklippt golfbana" alt="nyklippt golfbana">
+                        <img src="/bilder/golf-2352092_640.jpg" title="nyklippt golfbana" alt="nyklippt golfbana">
                         <figcaption>Nyklippt gräs</figcaption>
                     </figure>
                     <hgroup>
@@ -112,7 +112,7 @@
 
                 <article id="article8">
                     <figure>
-                        <img src="online-shopping-4532460_640.jpg" title="Handla online hos oss" alt="dator och en online låda">
+                        <img src="/bilder/online-shopping-4532460_640.jpg" title="Handla online hos oss" alt="dator och en online låda">
                         <figcaption>Beställ online</figcaption>
                     </figure>
                     <hgroup>
@@ -125,7 +125,7 @@
 
                 <article id="article9">
                     <figure>
-                        <img src="golf-1747079_640.jpg" title="Nyöppnat för säsongen" alt="bild över golfbanan">
+                        <img src="/bilder/golf-1747079_640.jpg" title="Nyöppnat för säsongen" alt="bild över golfbanan">
                         <figcaption>Öppnat för säsongen</figcaption>
                     </figure>
                     <hgroup>
@@ -138,7 +138,7 @@
 
                 <article id="article10">
                     <figure>
-                        <img src="news-2389226_640.png" title="golfbil" alt="vår nya golfbil">
+                        <img src="/bilder/news-2389226_640.png" title="golfbil" alt="vår nya golfbil">
                         <figcaption></figcaption>
                     </figure>
                     <hgroup>
