--- a/kod-html/Omoss/visiontest2.html
+++ b/kod-html/Omoss/visiontest2.html
@@ -24,7 +24,7 @@
                     <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
                     <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
                     <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
-                    <li><a href="#">Nyheter</a></li>
+                    <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
                 </ul>
             </li>
 
@@ -38,7 +38,7 @@
             </li>
 
             <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-            <li><a href="#">Restaurang | Shop</a></li>
+            <li><a href="/kod-html/restaurang/restaurang.html" target="_blank">Restaurang | Shop</a></li>
         </ul>
     </div>
      <div class="wrapper">
@@ -46,11 +46,11 @@
     
     <div class="under-header">
         <ul class="meny-höger-sida-omoss">
-    <li class="link-omoss"><a href="/kod-html/Omoss/visiontest2.html">VÅR VISION OCH HISTORIA</a></li>
-    <li class="link-omoss"><a href="/kod-html/hem/golfklubb.html">NYHETER</a></li>
+    <li class="link-omoss"><a href="/kod-html/omoss/visiontest2.html">VÅR VISION OCH HISTORIA</a></li>
+    <li class="link-omoss"><a href="/kod-html/omoss/banorna.html">BANORNA</a></li>
+    <li class="link-omoss"><a href="/kod-html/omoss/faciliteter.html">FACILITETER</a></li>
     <li class="link-omoss"><a href="/kod-html/medlem/medlem.html">MEDLEM</a></li>
-    <li class="link-omoss"><a href="/kod-html/Omoss/faciliteter.html">FACILITETER</a></li>
-    <li class="link-omoss"><a href="/kod-html/Omoss/banorna.html">BANORNA</a></li>
+    <li class="link-omoss"><a href="/kod-html/hem/golfklubb.html">NYHETER</a></li>
 </ul>
 </div>
     <div class="helasidan">
@@ -64,7 +64,7 @@
         oavsett om de är nya i sporten eller erfarna spelare.</p>
     </section>
 <nav class="anchor-links">
-<ul>
+<ul class="anchor-links-vision-ul">
     <li><a href="#en-dröm-föds">En dröm föds</a></li>
     <li><a href="#utvecklingen">Banan och Utvecklingen</a></li>
     <li><a href="#visionenframåt">Visionen framåt</a> </li>
@@ -111,7 +111,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
+            <img src="/bilder/Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
         </div>
 
         <div class="footer-hours">
@@ -122,17 +122,17 @@
 
         <div class="footer-links">
             <h3>Länkar</h3>
-            <a href="omoss.html">Om oss</a>
-            <a href="kontakt.html">Kontakt</a>
+            <a href="/kod-html/Omoss/omoss.html">Om oss</a>
+            <a href="/kod-html/kontakt/kontakt.html">Kontakt</a>
         </div>
 
         <div class="footer-social">
             <h3>Följ oss</h3>
             <a href="https://www.instagram.com" target="_blank">
-                <img src="instagram-3814080_1280.webp" alt="Instagram">
+                <img src="/bilder/instagram-3814080_1280.webp" alt="Instagram">
             </a>
             <a href="https://www.facebook.com" target="_blank">
-                <img src="facebook-6549798_1280.webp" alt="Facebook">
+                <img src="/bilder/facebook-6549798_1280.webp" alt="Facebook">
             </a>
         </div>
     </div>
