--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <!----Adinas nav del---->
+   <!-- Adinas nav del -->
     <div class="top-nav">
         <ul class="menu">
             <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
@@ -42,10 +42,48 @@
             </li>
 
             <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-            <li><a href="#">Restaurang | Shop</a></li>
+            <li><a href="#">Restaurang</a></li>
+            <li><a href="#">Shop</a></li>
         </ul>
+
+ <!-- Hamburgermeny för mindre skärmar -->
+<div class="hamburger-menu">
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
+            <ul class="hamburger-dropdown">
+                <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
+                <li><a href="#">Spela golf</a>
+                    <ul class="dropdown-spela">
+                        <li><a href="#">Företag</a></li>
+                        <li><a href="#">Gäst</a></li>
+                        <li><a href="#">Greenfee och priser</a></li>
+                        <li><a href="#">Tävlingar/Evenemang</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Om oss</a>
+                    <ul class="dropdown">
+                        <li><a href="#">Historia och vision</a></li>
+                        <li><a href="#">Våra banor</a></li>
+                        <li><a href="#">Faciliteter</a></li>
+                        <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+                        <li><a href="#">Nyheter</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Medlem</a>
+                    <ul class="dropdown-medlem">
+                        <li><a href="#">Logga in</a></li>
+                        <li><a href="#">Bli medlem</a></li>
+                        <li><a href="#">Förmåner</a></li>
+                        <li><a href="#">Bokning</a></li>
+                    </ul>
+                </li>
+                <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
+                <li><a href="#">Restaurang</a></li>
+                <li><a href="#">Shop</a></li>
+            </ul>
+        </div>
     </div>
-   <!----Adinas nav del slut---->
+   <!-- Adinas nav del slut -->
 
     
     <div class="video-container">
