--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -24,25 +24,25 @@
 
             <li><a href="#">Om oss</a>
                 <ul class="dropdown">
-                    <li><a href="#">Historia och vision</a></li>
-                    <li><a href="#">Våra banor</a></li>
-                    <li><a href="#">Faciliteter</a></li>
+                    <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
+                    <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
+                    <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
                     <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
-                    <li><a href="#">Nyheter</a></li>
+                    <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
                 </ul>
             </li>
 
             <li><a href="#">Medlem</a>
                 <ul class="dropdown-medlem">
                     <li><a href="#">Logga in</a></li>
-                    <li><a href="#">Bli medlem</a></li>
+                    <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
                     <li><a href="#">Förmåner</a></li>
                     <li><a href="#">Bokning</a></li>
                 </ul>
             </li>
 
             <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-            <li><a href="#">Restaurang</a></li>
+            <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
             <li><a href="#">Shop</a></li>
         </ul>
 
