--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -139,18 +139,15 @@
         <video autoplay muted loop id="tavvideo">
             <source src="/filmer/tavgolf3.mp4" type="video/mp4">
         </video>
-        <div class="callout">
-            <div>Svinga mot stjärnorna... <br> ...låt varje putt bli en seger! ⛳️✨</div>
-        </div>
-            <figure>
-            <a href="tavlingar_kalendern.html" target="_blank"><img class="goldencup" alt="A gold cup" src="/bilder/goldencup_transparent3.png" style="height: 45%; width: 15%;"></a>
-            <figcaption class="caption1">Tävla</figcaption>
-            </figure>
-            <figure>
-            <a href="tavlingar_kalendern.html" target="_blank"><img class="kalender" alt="A golf event calendar" src="/bilder/calendar.png" style="height: 45%; width: 15%;"></a>
-            <figcaption class="caption2">Kalender</figcaption>
-            </figure>
-        </div>
+        <p class="callout">
+            Svinga mot stjärnorna... låt varje putt bli en seger! ⛳️✨
+            <br>
+            Klicka på bilden för att tävla!
+        </p>
+        <figure>
+            <a href="../tavlingar-evenemang/tavlingar-evenemang.html"><img class="goldencup" alt="A gold cup"
+                    src="/bilder/tavlingar_evenemang.png"></a>
+        </figure>
     </div>
     <!--End Geneskod: Tävlingar och Evenemang -->
     
@@ -205,11 +202,12 @@
         <hr class="line">
         <div class="footer-container-legal">
             <div class="footer-cookies">
-                <p><a href="legal.html">Kakor</a> &VerticalLine;
-                <a href="legal.html">Integritetspolicy</a></p>
+                <p><a href="/kod-html/legal/legal.html">Kakor</a> &VerticalLine;
+                    <a href="/kod-html/legal/legal.html">Integritetspolicy</a>
+                </p>
             </div>
             <div class="footer-copyright">
-                <p>Copyright &copy; 2004-2024</p>
+                <p><a href="/kod-html/legal/legal.html">Copyright &copy; 2004-2024</a></p>
             </div>
         </div>
         <!--End of Geneskod Upphövsrätt-->
