--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -145,7 +145,7 @@
             Klicka på bilden för att tävla!
         </p>
         <figure>
-            <a href="../tavlingar-evenemang/tavlingar-evenemang.html"><img class="goldencup" alt="A gold cup"
+            <a href="/kod-html/tavlingar-evenemang/tavlingar-evenemang.html"><img class="goldencup" alt="A gold cup"
                     src="/bilder/tavlingar_evenemang.png"></a>
         </figure>
     </div>
