--- a/kod-html/Omoss/omoss.html
+++ b/kod-html/Omoss/omoss.html
@@ -41,7 +41,7 @@
             <li><a href="/kod-html/restaurang/restaurang.html" target="_blank">Restaurang | Shop</a></li>
         </ul>
     </div>
-    <div class="background-div">
+    <div class="background-div-omoss">
         <div class="under-header">
             <ul class="meny-höger-sida-omoss">
         <li class="link-omoss"><a href="/kod-html/omoss/visiontest2.html">VÅR VISION OCH HISTORIA</a></li>
@@ -51,7 +51,7 @@
         <li class="link-omoss"><a href="/kod-html/hem/golfklubb.html">NYHETER</a></li>
     </ul>
 </div>
-        <div class="text-container"> 
+        <div class="text-container-omoss"> 
 <p class="omoss">
     <strong>Välkommen till TUC Golfklubb, en naturskön oas för golfälskare!</strong> <br><br>
 Sedan starten 2004 har vi strävat efter att erbjuda en förstklassig upplevelse för både nybörjare<br> och erfarna spelare. <br>
