--- a/kod-html/produkt.html
+++ b/kod-html/produkt.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>produkt</title>
-    <link rel="stylesheet" href="produkt.css">
+    <link rel="stylesheet" href="/kod-css/produkt.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <!--Navigation-->
 
     <div class="navbar">
-        <a href="#">Hem</a>
+        <a href="/kod-html/index.html">Hem</a>
         <a href="#golfklubbor">Golfklubbor</a>
         <a href="#bollar">Bollar</a>
         <a href="#golfkläder">Golfkläder</a>
