--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -34,10 +34,10 @@
 
             <li><a href="#">Medlem</a>
                 <ul class="dropdown-medlem">
-                    <li><a href="#">Logga in</a></li>
+                    <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
                     <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
-                    <li><a href="#">Förmåner</a></li>
-                    <li><a href="#">Bokning</a></li>
+                    <li><a href="/kod-html/medlem/createnewmember.html">Förmåner</a></li>
+                    <li><a href="/kod-html/medlem/bokning-medlem.html">Bokning</a></li>
                 </ul>
             </li>
 
@@ -99,31 +99,35 @@
 
 <section>
     <div class="section-button">
-        <div class="member-button">
-            <a href="/kod-html/medlem/createnewmember.html" class="button"><strong>Logga in | Bli medlem nu!</strong></a>
+        <div class="three-buttons">
+            <a href="/kod-html/medlem/createnewmember.html" class="button"><strong>Bli medlem nu! </strong></a>
+
+            <a href="#" class="button"><strong>Boka här</strong></a>
+
+            <a href="/kod-html/medlem/medlem.html" class="button"><strong>Logga in</strong></a>
         </div>
     </div>
 
     <div class="newssite">
         <h1>Aktuellt</h1>
-            <a href="">Mer nyheter..</a>
+            <a href="/kod-html/Omoss/nyheter.html">Mer nyheter..</a>
     </div>
 
     <div class="image-links">
         <div class="picture-boxes">
             <figure>
                 <figcaption>Våra nya golfbilar...</figcaption>
-                <a href=""><img src="/bilder/golf-cart-756048_640.jpg" alt="Golfbil" title="våra nya golfbilar"></a> 
+                <a href="/kod-html/Omoss/nyheter.html#article1"><img src="/bilder/golf-cart-756048_640.jpg" alt="Golfbil" title="våra nya golfbilar"></a> 
             </figure>
 
             <figure>
                 <figcaption>Publikrekord under sommarens golftävling...</figcaption>
-                <a href=""><img src="/bilder/bernhard-longer-1501038_640.jpg" alt="man spelar golf" title="golftävling"></a>
+                <a href="/kod-html/Omoss/nyheter.html#article2"><img src="/bilder/bernhard-longer-1501038_640.jpg" alt="man spelar golf" title="golftävling"></a>
             </figure>
 
             <figure>
-                <figcaption>Anmäl dig till höstens golfkurser</figcaption>
-                <a href=""><img src="/bilder/golf-1909115_640.jpg" alt="Golfklubbor" title="golfkurs"></a>
+                <figcaption>Anmäl dig till höstens golfkurser...</figcaption>
+                <a href="/kod-html/Omoss/nyheter.html#article3"><img src="/bilder/golf-1909115_640.jpg" alt="Golfklubbor" title="golfkurs"></a>
             </figure>
         </div>
     </div>
@@ -145,7 +149,7 @@
             Klicka på bilden för att tävla!
         </p>
         <figure>
-            <a href="../tavlingar-evenemang/tavlingar-evenemang.html"><img class="goldencup" alt="A gold cup"
+            <a href="/kod-html/tavlingar-evenemang/tavlingar-evenemang.html"><img class="goldencup" alt="A gold cup"
                     src="/bilder/tavlingar_evenemang.png"></a>
         </figure>
     </div>
