--- a/kod-html/Omoss/omoss.html
+++ b/kod-html/Omoss/omoss.html
@@ -77,7 +77,7 @@ Välkommen till TUC Golfklubb där golf, gemenskap och naturupplevelser möts!
     <div class="footer-container">
         
         <div class="footer-logo">
-            <img src="/bilder/Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
+            <img src="/bilder/logo-footer.png" alt="Golfklubbens logotyp">
         </div>
 
         
