--- a/kod-html/Omoss/banorna.html
+++ b/kod-html/Omoss/banorna.html
@@ -77,7 +77,7 @@
      <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="/bilder/Skärmbild 2024-10-01 140738 (1).png" alt="Golfklubbens logotyp">
+                <img src="/bilder/logo-footer.png" alt="Golfklubbens logotyp">
             </div>
     
             <div class="footer-hours">
