--- a/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html
+++ b/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html
@@ -16,7 +16,7 @@
 
   <div class="top-nav">
     <ul class="menu">
-        <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
+        <li><a href="/kod-html/hem/index.html">Hem</a></li>
 
         <li><a href="#">Spela golf</a>
             <ul class="dropdown-spela">
@@ -63,7 +63,7 @@
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
         <ul class="hamburger-dropdown">
-            <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
+            <li><a href="/kod-html/hem/index.html">Hem</a></li>
             <li><a href="#">Spela golf</a>
                 <ul class="dropdown-spela">
                     <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
