--- a/kod-html/spela-golf/greenfee-regler.html
+++ b/kod-html/spela-golf/greenfee-regler.html
@@ -9,19 +9,65 @@
 </head>
 <body>
 
-    <div class="top-nav">
-        <ul class="menu">
-            <li><a href="/kod-html/hem/Index.html">Hem</a></li>
+   <!-- Adinas nav del -->
 
+
+   <div class="top-nav">
+    <ul class="menu">
+        <li><a href="/kod-html/hem/index.html">Hem</a></li>
+
+        <li><a href="#">Spela golf</a>
+            <ul class="dropdown-spela">
+                <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
+                <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
+                 <li><a href="/kod-html/spela-golf/greenfee-regler.html">Greenfee & Regler</a></li>
+                <li><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/<br>Evenemang</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#">Om oss</a>
+            <ul class="dropdown">
+                <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
+                <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
+                <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
+                <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+                <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
+            </ul>
+        </li>
+
+        <li><a href="#">Medlem</a>
+            <ul class="dropdown-medlem">
+                <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
+                <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
+                <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
+                <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
+                <li><a href="/kod-html/medlem/createnewmember.html">Förmåner</a></li>
+            </ul>
+        </li>
+
+        <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
+
+        <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
+
+     
+
+        <li><a href="/kod-html/shop-index.html">Shop</a></li>
+    </ul>
+
+<!-- Hamburgermeny för mindre skärmar -->
+<div class="hamburger-menu">
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
+        <ul class="hamburger-dropdown">
+            <li><a href="/kod-html/hem/index.html">Hem</a></li>
             <li><a href="#">Spela golf</a>
                 <ul class="dropdown-spela">
-                    <li><a href="/kod-html/bokning/foretag.html">Företag</a></li>
-                    <li><a href="/kod-html/bokning/gast.html">Gäst</a></li>
-                     <li><a href="/kod-html/bokning/greenfee-regler.html">Greenfee & regler</a></li>
-                    <li><a href="#">Tävlingar/<br>Evenemang</a></li>
+                    <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
+                    <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
+                    <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
+                    <li id="four"><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/Evenemang</a></li>
                 </ul>
             </li>
-
             <li><a href="#">Om oss</a>
                 <ul class="dropdown">
                     <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
@@ -31,59 +77,21 @@
                     <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
                 </ul>
             </li>
-
             <li><a href="#">Medlem</a>
                 <ul class="dropdown-medlem">
                     <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
                     <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
-                    <li><a href="/kod-html/medlem/createnewmember.html">Förmåner</a></li>
-                    <li><a href="/kod-html/medlem/bokning-medlem.html">Bokning</a></li>
+                    <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
+                    <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
                 </ul>
             </li>
-
             <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-
             <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
-
-            <li><a href="#">Shop</a></li>
+            <li><a href="/kod-html/shop-index.html">Shop</a></li>
         </ul>
-
-        <div class="hamburger-menu">
-            <input type="checkbox" id="menu-toggle" class="menu-toggle">
-            <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
-            <ul class="hamburger-dropdown">
-                <li><a href="/kod-html/hem/golfklubb.html">Hem</a></li>
-                <li><a href="#">Spela golf</a>
-                    <ul class="dropdown-spela">
-                        <li><a href="#">Företag</a></li>
-                        <li><a href="#">Gäst</a></li>
-                        <li><a href="#">Greenfee och priser</a></li>
-                        <li><a href="#">Tävlingar/Evenemang</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Om oss</a>
-                    <ul class="dropdown">
-                        <li><a href="#">Historia och vision</a></li>
-                        <li><a href="#">Våra banor</a></li>
-                        <li><a href="#">Faciliteter</a></li>
-                        <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
-                        <li><a href="#">Nyheter</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Medlem</a>
-                    <ul class="dropdown-medlem">
-                        <li><a href="#">Logga in</a></li>
-                        <li><a href="#">Bli medlem</a></li>
-                        <li><a href="#">Förmåner</a></li>
-                        <li><a href="#">Bokning</a></li>
-                    </ul>
-                </li>
-                <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-                <li><a href="#">Restaurang</a></li>
-                <li><a href="#">Shop</a></li>
-            </ul>
-        </div>
     </div>
+</div>
+<!-- Adinas nav del slut -->
 
      <header class="greenfee-header">
         <img src="/bilder/greenfee-header.jpg" alt="Golfbana">
