fixat länk i footer

--- a/kod-html/produkt.html
+++ b/kod-html/produkt.html
@@ -984,10 +984,10 @@
         <div class="betalning">
             <h2>Betalningsmetoder</h2>
             <ul>
-                <li><img src="Mastercard.svg" alt="Mastercard" ></li>
-                <li><img src="PayPal__1_.svg" alt="PayPal"></li>
-                <li><img src="swish-logo.svg" alt="Swish"></li>
-                <li><img src="Visa.svg" alt="Visa"></li>
+                <li><img src="/bilder/mastercard.jpg" alt="Mastercard" ></li>
+                <li><img src="/bilder/paypal.jpg" alt="PayPal"></li>
+                <li><img src="/bilder/swish-logo.png" alt="Swish"></li>
+                <li><img src="/bilder/visa.png" alt="Visa"></li>
             </ul>
         </div>
     </footer>
