--- a/kod-html/produkt.html
+++ b/kod-html/produkt.html
@@ -41,7 +41,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Driver" class="p-img">
+                        <img src="/bilder/Golfklubbor.jpg" alt="Driver" class="p-img">
                         <figcaption>Driver</figcaption>
                     </figure>
                 </div>
@@ -81,7 +81,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Järnklubbor" class="p-img">
+                        <img src="/bilder/Golfklubbor.jpg" alt="Järnklubbor" class="p-img">
                         <figcaption>Järnklubbor</figcaption>
                     </figure>
                 </div>
@@ -115,7 +115,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Wedges" class="p-img">
+                        <img src="/bilder/Golfklubbor.jpg" alt="Wedges" class="p-img">
                         <figcaption>Wedges</figcaption>
                     </figure>
                 </div>
@@ -149,7 +149,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Putters" class="p-img">
+                        <img src="/bilder/Golfklubbor.jpg" alt="Putters" class="p-img">
                         <figcaption>Putters</figcaption>
                     </figure>
                 </div>
@@ -187,7 +187,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Tröjor" class="p-img">
+                        <img src="/bilder/Golfkläder.jpg" alt="Tröjor" class="p-img">
                         <figcaption>Tröjor</figcaption>
                     </figure>
                 </div>
@@ -221,7 +221,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Byxor och Shorts" class="p-img">
+                        <img src="/bilder/Golfkläder.jpg" alt="Byxor och Shorts" class="p-img">
                         <figcaption>Byxor och Shorts</figcaption>
                     </figure>
                 </div>
@@ -255,7 +255,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Jackor" class="p-img">
+                        <img src="/bilder/Golfkläder.jpg" alt="Jackor" class="p-img">
                         <figcaption>Jackor</figcaption>
                     </figure>
                 </div>
@@ -290,7 +290,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Kepsar" class="p-img">
+                        <img src="/bilder/Golfkläder.jpg" alt="Kepsar" class="p-img">
                         <figcaption>Kepsar</figcaption>
                     </figure>
                 </div>
@@ -329,7 +329,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Spikade skor" class="p-img">
+                        <img src="/bilder/Skor.jpg" alt="Spikade skor" class="p-img">
                         <figcaption>Spikade skor</figcaption>
                     </figure>
                 </div>
@@ -364,7 +364,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Spikfria skor" class="p-img">
+                        <img src="/bilder/Skor.jpg" alt="Spikfria skor" class="p-img">
                         <figcaption>Spikfria skor</figcaption>
                     </figure>
                 </div>
@@ -400,7 +400,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Spikfria skor" class="p-img">
+                        <img src="/bilder/Skor.jpg" alt="Spikfria skor" class="p-img">
                         <figcaption>Spikfria skor</figcaption>
                     </figure>
                 </div>
@@ -440,7 +440,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Caddyväskor" class="p-img">
+                        <img src="/bilder/Golfväska.jpg" alt="Caddyväskor" class="p-img">
                         <figcaption>Caddyväskor</figcaption>
                     </figure>
                 </div>
@@ -476,7 +476,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Bärväskor" class="p-img">
+                        <img src="/bilder/Golfväska.jpg" alt="Bärväskor" class="p-img">
                         <figcaption>Bärväskor</figcaption>
                     </figure>
                 </div>
@@ -515,7 +515,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Tee" class="p-img">
+                        <img src="/bilder/Tillbehör.jpg" alt="Tee" class="p-img">
                         <figcaption>Tee</figcaption>
                     </figure>
                 </div>
@@ -549,7 +549,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Handskar" class="p-img">
+                        <img src="/bilder/Tillbehör.jpg" alt="Handskar" class="p-img">
                         <figcaption>Handskar</figcaption>
                     </figure>
                 </div>
@@ -585,7 +585,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Paraplyer" class="p-img">
+                        <img src="/bilder/Tillbehör.jpg" alt="Paraplyer" class="p-img">
                         <figcaption>Paraplyer</figcaption>
                     </figure>
                 </div>
@@ -620,7 +620,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Golfhanddukar" class="p-img">
+                        <img src="/bilder/Tillbehör.jpg" alt="Golfhanddukar" class="p-img">
                         <figcaption>Golfhanddukar</figcaption>
                     </figure>
                 </div>
@@ -658,7 +658,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Bollar" class="p-img">
+                        <img src="/bilder/Bollar.jpg" alt="Bollar" class="p-img">
                         <figcaption>Bollar</figcaption>
                     </figure>
                 </div>
@@ -697,7 +697,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Puttingmattor" class="p-img">
+                        <img src="/bilder/Träningsutrustning.jpg" alt="Puttingmattor" class="p-img">
                         <figcaption>Puttingmattor</figcaption>
                     </figure>
                 </div>
@@ -731,7 +731,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Träningsredskap" class="p-img">
+                        <img src="/bilder/Träningsutrustning.jpg" alt="Träningsredskap" class="p-img">
                         <figcaption>Träningsredskap</figcaption>
                     </figure>
                 </div>
@@ -770,7 +770,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="GPS-enheter" class="p-img">
+                        <img src="/bilder/Elektronik.jpg" alt="GPS-enheter" class="p-img">
                         <figcaption>GPS-enheter</figcaption>
                     </figure>
                 </div>
@@ -805,7 +805,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Avståndsmätare" class="p-img">
+                        <img src="/bilder/Elektronik.jpg" alt="Avståndsmätare" class="p-img">
                         <figcaption>Avståndsmätare</figcaption>
                     </figure>
                 </div>
@@ -840,7 +840,7 @@
             <div class="item">
                 <div class="item_image">
                     <figure>
-                        <img src="#" alt="Appar" class="p-img">
+                        <img src="/bilder/Elektronik.jpg" alt="Appar" class="p-img">
                         <figcaption>Appar</figcaption>
                     </figure>
                 </div>
