--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -196,7 +196,7 @@
             
             <div class="footer-links">
                 <h3>Länkar</h3>
-                <a href="">Om oss</a>
+                <a href="/kod-html/Omoss/omoss.html">Om oss</a>
                 <a href="/kod-html/kontakt/kontakt.html">Kontakt</a>
                 
             </div>
