--- a/kod-html/medlem/createnewmember.html
+++ b/kod-html/medlem/createnewmember.html
@@ -140,8 +140,8 @@
 
             <div class="footer-links">
                 <h3>Länkar</h3>
-                <a href="/om-oss/omoss.html">Om oss</a>
-                <a href="/kontakt/kontakt.html">Kontakt</a>
+                <a href="/kod-html/Omoss/omoss.html">Om oss</a>
+                <a href="/kod-html/kontakt/kontakt.html">Kontakt</a>
             </div>
 
             <div class="footer-social">
