--- a/kod-html/medlem/medlem.html
+++ b/kod-html/medlem/medlem.html
@@ -162,7 +162,7 @@
 
             <div class="footer-links">
                 <h3>Länkar</h3>
-                <a href="">Om oss</a>
+                <a href="/kod-html/Omoss/omoss.html">Om oss</a>
                 <a href="/kod-html/kontakt/kontakt.html">Kontakt</a>
             </div>
 
