--- a/kod-html/hem/Index.html
+++ b/kod-html/hem/Index.html
@@ -112,7 +112,7 @@
         <div class="three-buttons">
             <a href="/kod-html/medlem/createnewmember.html" class="button"><strong>Bli medlem nu! </strong></a>
 
-            <a href="#" class="button"><strong>Boka här</strong></a>
+            <a href="/kod-html/medlem/bokning.html" class="button"><strong>Boka här</strong></a>
 
             <a href="/kod-html/medlem/medlem.html" class="button"><strong>Logga in</strong></a>
         </div>
